--- a/ReadwirteSeparation/src/main/resources/bootstrap.yml
+++ b/ReadwirteSeparation/src/main/resources/bootstrap.yml
@@ -1,12 +1,22 @@
 spring:
   datasource:
+#    url: jdbc:mysql://127.0.0.1:3306/goods_db_1
+#    username: root
+#    password: root
+#    driver-class-name: com.mysql.cj.jdbc.Driver
     master:
-      jdbc-url: jdbc:mysql://127.0.0.1:3306/goods_db_1
+      jdbc-url: jdbc:mysql://127.0.0.1:3306/goods_db_1?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
       username: root
       password: root
       driver-class-name: com.mysql.cj.jdbc.Driver
     slave:
-      jdbc-url: jdbc:mysql://127.0.0.1:3306/goods_db_2
+      jdbc-url: jdbc:mysql://127.0.0.1:3306/goods_db_2?characterEncoding=utf-8&useUnicode=true&useSSL=false&serverTimezone=UTC
       username: root   # 只读账户
       password: root
       driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:mapper/**/*.xml
+  type-aliases-package: com.example.readwrite.bean
